@startuml analog
class AnalogOut {
    + duty()
    + set_high_level_output_ratio(f32)
    + start_changing_by_fixed_amount(u64, f32, f32)
    + start_increasing(u64, f32, f32)
    + start_decreasing(u64, f32, f32)
    + start_increasing_bounce_back(u64, f32, f32, Option<u32>)
    + start_decreasing_bounce_back(u64, f32, f32, Option<u32>)
    + start_increasing_reset(u64, f32, f32, Option<u32>)
    + start_decreasing_reset(u64, f32, f32, Option<u32>)
    + update_interrupt()
}

class _AnalogOut{
    -driver: LedcDriver<'a>,
    -timer_driver: TimerDriver<'a>,
    +duty: Arc<AtomicU32>,
    -fixed_change_increasing: Arc<AtomicBool>,
    -amount_of_cycles: Option<u32>,
    + duty()
    + set_high_level_output_ratio(f32)
    + start_changing_by_fixed_amount(u64, f32, f32)
    + start_increasing(u64, f32, f32)
    + start_decreasing(u64, f32, f32)
    + start_increasing_bounce_back(u64, f32, f32, Option<u32>)
    + start_decreasing_bounce_back(u64, f32, f32, Option<u32>)
    + start_increasing_reset(u64, f32, f32, Option<u32>)
    + start_decreasing_reset(u64, f32, f32, Option<u32>)
    + update_interrupt()

}

class AnalogIn {
    -adc_channel_driver: AnalogChannels<'a>
    +read()
    +read_raw()
    +smooth_read(u16)
}

class AnalogInPWM{
    -sampling: u32
    +set_sampling(u32)
    +read()
    +read_percentage()
}

class ChangeDutyUpdate{
    -change: Arc<AtomicBool>
    +change_duty()
    +handle_change_duty()
}

enum FixedChangeType {
    None(),
    Decrease(ExtremeDutyPolicy),
    Increase(ExtremeDutyPolicy),
}

enum ExtremeDutyPolicy{
    BounceBack,
    None,
    Reset,
}

AnalogOut *-- _AnalogOut
_AnalogOut *-- ChangeDutyUpdate
_AnalogOut -> FixedChangeType
AnalogInPWM *- AnalogIn
FixedChangeType --> ExtremeDutyPolicy

@enduml